# QRcode

./: CMakeLists.txt  main.c  qrcodegen.c  qrcodegen.h  test2.txt
SDL2/include/: SDL_main.h
